fixed alignement of locationSelectionInput

--- a/app/less/components.less
+++ b/app/less/components.less
@@ -1254,7 +1254,8 @@ div#roleSwitch {
 input[type="text"]#locationSelectionInput {
   font-size: 65px;
   height: 73px;
-  padding-left: 50%;
+  padding: 7px 6px 0 50%;
+  // padding-left: 50%;
   color: @onNoteColor30;
   .border-box;
   width: 100%;
